--- a/app/src/main/res/layout/item_animal.xml
+++ b/app/src/main/res/layout/item_animal.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="top"
+            android:contentDescription="@string/image"
             android:scaleType="centerCrop"
             tools:background="@tools:sample/backgrounds/scenic[6]" />
 
