--- a/app/src/main/res/layout/item_animal_section.xml
+++ b/app/src/main/res/layout/item_animal_section.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="12dp"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.TitleSection"
-        android:textColor="@color/onBackgroundSecondary"
+        android:textColor="@color/black"
         tools:text="Cats" />
 
     <androidx.recyclerview.widget.RecyclerView
