--- a/app/src/main/res/layout/item_animal_section.xml
+++ b/app/src/main/res/layout/item_animal_section.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/sectionTitleTextView"
+        android:id="@+id/sectionTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -17,12 +18,13 @@
         android:textColor="@color/black"
         tools:text="Cats" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/titledSectionRecycler"
+    <com.airbnb.epoxy.EpoxyRecyclerView
+        android:id="@+id/sectionRV"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/grid_item_height"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="horizontal"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
